[package]
name = "gtree"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtree_macro = { path = "../gtree_macro" }
gtree_proc_macro = { path = "../gtree_proc_macro" }
log = "0.4"
illicit = "1.1.2"
# [target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", features = ["color"] }
