[package]
name = "gtree"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
gtree_macro = { path = "../gtree_macro" }
gtree_proc_macro = { path = "../gtree_proc_macro" }
# [target.'cfg(target_arch = "wasm32")'.dependencies]
