[package]
name = "gtree_macro"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full" ,"extra-traits"] }
# "extra-traits"
quote = "1"
proc-macro2 = { version = "1.0", features = ["nightly"] }
proc-quote = "0.4.0"
# lazy_static ="1.4"
trace-var={path = "../../trace-var"}
match_any="1.0.1"