[package]
name = "gtree_macro"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
publish = false
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
either = "1.7.0"
# indexmap = "1.9"
im-rc = "15"
syn = { version = "1.0", features = ["full", "extra-traits"] }
# "extra-traits"
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1"
# proc-quote = "0.4.0"
# lazy_static ="1.4"
trace-var = { path = "../../trace-var" }
match_any = "1.0.1"

nanoid = "0.4.0"
tracing = "0.1"
parse-display = "0.8.0"

proc-macro-crate = "1.3.0"

emg_hasher = { path = "../emg_hasher" }

[dev-dependencies]
emg_layout = { path = "../emg_layout" }
emg_common = { path = "../emg_common" }
tracing-subscriber = "0.3"
tracing-tree = { path = "../../tracing-tree" }
insta = "1"
