[package]
name = "gtree_proc_macro"
version = "0.1.0"
authors = ["cuiluming <cuiluming@chaoway.net>"]
edition = "2021"
publish = false
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
# 1.0.65
syn = { version = "=1.0", features = ["full", "parsing", "proc-macro"] }
gtree_macro = { path = "../gtree_macro" }

proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1"
# proc-quote = "0.4.0"
