[package]
name = "checkbox"
version = "0.1.0"
authors = ["Rais"]
edition = "2021"
publish = false
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

# [profile.dev.package.backtrace]
# opt-level = 3


[features]
default = ["gpu", "debug"]
gpu = ["emg_bind/gpu"]
debug = ["emg_bind/debug"]


[dependencies.emg_bind]
path = "../../emg_bind"
features = [
    "gpu",
    #  "no_default_shaping"
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = { path = "../../../tracing-tree" }
color-eyre = "0.6.2"
insta = "1"
