[package]
name = "counter"
version = "0.1.0"
authors = ["Rais"]
edition = "2021"
publish = false
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
emg_bind = { path = "../../emg_bind", features = ["gpu"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "registry",
    "std",
] }
tracing-tree = "0.2.1"
